force-app/main/default/objects/Opportunity/fields/Contract_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Model__c</fullName>
    <label>Price / Delivery Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed price/Target price</fullName>
            </value>
            <value>
                <fullName>T&amp;M (No estimates or cap)</fullName>
            </value>
            <value>
                <fullName>T&amp;M with estimates / delivery responsibility</fullName>
            </value>
            <value>
                <fullName>SW/Solution delivery</fullName>
            </value>
            <value>
                <fullName>FAST</fullName>
            </value>
            <value>
                <fullName>T&amp;M delivery responsibility</fullName>
                <isActive>false</isActive>
                <label>T&amp;M delivery responsibility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>