force-app/main/default/objects/Opportunity/fields/Contract_review_according_to_DOA__c.field-meta.xml
<CustomField>
    <fullName>Contract_review_according_to_DOA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box when review is done in accordance with DOA</inlineHelpText>
    <label>Contract review according to DOA</label>
    <type>Checkbox</type>
</CustomField>