force-app/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Used for integration (contract archive in Service Now) Not visible to end user
Do not delete</description>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contract</fullName>
                <default>true</default>
                <label>No contract</label>
            </value>
            <value>
                <fullName>Contract uploaded</fullName>
            </value>
            <value>
                <fullName>Contract approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>