force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Tatt bort fra skjermbilde etter ønske fra Renate Jacobsen 27.06.24 Slettes etter hvert</description>
    <inlineHelpText>Choose type of contract and payment terms relevant for the opportunity</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>T&amp;M with deliverables or limit</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Frame agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>