force-app/main/default/objects/Opportunity/fields/ContractServiceNowUrl__c.field-meta.xml
<CustomField>
    <fullName>ContractServiceNowUrl__c</fullName>
    <label>Contract ServiceNow Url</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>