force-app/main/default/objects/Opportunity/fields/ContractSysId__c.field-meta.xml
<CustomField>
    <fullName>ContractSysId__c</fullName>
    <label>Contract Sys Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>