force-app/main/default/objects/Opportunity/fields/Create_bid_room__c.field-meta.xml
<CustomField>
    <fullName>Create_bid_room__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bid room will be created when opportunity is saved</inlineHelpText>
    <label>Create bid room</label>
    <type>Checkbox</type>
</CustomField>