force-app/main/default/objects/Opportunity/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>TEXT(Owner.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>