force-app/main/default/objects/Opportunity/fields/Custom_Probability__c.field-meta.xml
<CustomField>
    <fullName>Custom_Probability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is in the backend and checks to true once the custom probability field was changed. That indicates that the sales process continues with the custom value and not the standard field</description>
    <label>Custom Probability</label>
    <type>Checkbox</type>
</CustomField>