force-app/main/default/objects/Opportunity/fields/Days_from_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>Days_from_CloseDate__c</fullName>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from CloseDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>