force-app/main/default/objects/Opportunity/fields/Days_From_Proposal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Proposal_Due_Date__c</fullName>
    <formula>Proposal_Due_Date_Time__c  - NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Proposal Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>