force-app/main/default/objects/Opportunity/fields/Days_Onsite_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_Onsite_per_Week__c</fullName>
    <label>Days Onsite per Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>