force-app/main/default/objects/Opportunity/fields/Days_since_last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Activity__c</fullName>
    <description>Displays the days since the last activity logged in the system</description>
    <formula>TODAY() - LastActivityDate</formula>
    <label>Days since last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>