force-app/main/default/objects/Opportunity/fields/Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Representative from DEL, is responsible for the quality of the offer. Responsible for methods for quality assurance, following up on quality work, proposing measures and flagging quality challenges to the Apps owner. Delivery manager has Apps owner as escalation point</inlineHelpText>
    <label>Delivery Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Opportunities (Delivery Manager)</relationshipLabel>
    <relationshipName>OpportunitiesDeliveryMgr</relationshipName>
    <type>Lookup</type>
</CustomField>