force-app/main/default/objects/Opportunity/fields/Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Site__c</fullName>
    <inlineHelpText>Specify in which city delivery is to take place</inlineHelpText>
    <label>Delivery Site</label>
    <length>128</length>
    <type>Text</type>
</CustomField>