force-app/main/default/objects/Opportunity/fields/Description_custom__c.field-meta.xml
<CustomField>
    <fullName>Description_custom__c</fullName>
    <description>this field is a hidden field that is used as a place holder for the description that is coming from Lead and will be mapped to the description field in opportunity</description>
    <label>Lead Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>