force-app/main/default/objects/Opportunity/fields/Description_SPIN__c.field-meta.xml
<CustomField>
    <fullName>Description_SPIN__c</fullName>
    <label>Description (SPIN)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>