force-app/main/default/objects/Opportunity/fields/Diarie_nr__c.field-meta.xml
<CustomField>
    <fullName>Diarie_nr__c</fullName>
    <inlineHelpText>If the call-off indicates a record number or similar, we indicate this</inlineHelpText>
    <label>Diarie nr</label>
    <length>128</length>
    <type>Text</type>
</CustomField>