force-app/main/default/objects/Opportunity/fields/DOA_Contract_Review_Policy__c.field-meta.xml
<CustomField>
    <fullName>DOA_Contract_Review_Policy__c</fullName>
    <formula>HYPERLINK(&quot;https://soprasteriasc.my.salesforce.com/sfc/p/58000000XlxV/a/4I000001jJOJ/zLVsBQUvrRTsyYX6T8hSoUl.Jg35ifsZy8v7aVgC_G8&quot;, &quot;DOA Delegation of Authority&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOA - Delegation of Authority</label>
    <type>Text</type>
</CustomField>