force-app/main/default/objects/Opportunity/fields/DPS_Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>DPS_Amount_Lost__c</fullName>
    <description>Removed access 13.05.25 To be deleted</description>
    <formula>IF( AND(Includes(Business_Unit__c, &quot;DPS&quot;),!INCLUDES(Business_Unit__c, &quot;APPS&quot;) , !INCLUDES(Business_Unit__c,&quot;BC&quot;)), Amount_Lost__c, 
Amount_Lost__c * DPS_Share_Pct__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxxDPS Amount Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>