force-app/main/default/objects/Opportunity/fields/DPS_Bid_Manager_optional__c.field-meta.xml
<CustomField>
    <fullName>DPS_Bid_Manager_optional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPS Bid Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DPSBidMgr</relationshipName>
    <type>Lookup</type>
</CustomField>