force-app/main/default/objects/Opportunity/fields/DPS_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>DPS_Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bid owner in DPS. Is automatically populated with the Apps owner who is registered on the Account in Salesforce, but this can be manually overridden.</description>
    <inlineHelpText>Capture Manager in DPS Management group, which can be held by DPS Client Developer, Business Owner, Presales or Sales Efficiency. The role is responsible for driving the offer forward, ensuring leverage of Service Areas, reporting progress and risk as well as optimizing the offer quality</inlineHelpText>
    <label>DPS Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DPSBusinessOwner</relationshipName>
    <type>Lookup</type>
</CustomField>