force-app/main/default/objects/Opportunity/fields/DPS_Client_Developer2__c.field-meta.xml
<CustomField>
    <fullName>DPS_Client_Developer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Removed from page layout. May be deleted, need to check with Sharepoint integration for staffing/resource module</description>
    <label>DPS Client Developer2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DPSClientDev2</relationshipName>
    <type>Lookup</type>
</CustomField>