force-app/main/default/objects/Opportunity/fields/DPS_Comments__c.field-meta.xml
<CustomField>
    <fullName>DPS_Comments__c</fullName>
    <description>Removed from page layout. May be deleted, need to check with Sharepoint integration for staffing/resource module</description>
    <label>DPS Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>