force-app/main/default/objects/Opportunity/fields/DPS_Owner__c.field-meta.xml
<CustomField>
    <fullName>DPS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account Manager in DPS Management group, assigned to Priority- and Hunting accounts. The role is responsible for Relationship Management during the sales process. The field is inherited from Client object in SF</inlineHelpText>
    <label>DPS Client Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DPS_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>