force-app/main/default/objects/Opportunity/fields/DPS_Presales_Resources_optional__c.field-meta.xml
<CustomField>
    <fullName>DPS_Presales_Resources_optional__c</fullName>
    <label>DPS Presales Resources (optional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>