force-app/main/default/objects/Opportunity/fields/DPS_Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>DPS_Priority_Customer__c</fullName>
    <label>DPS Priority Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>