force-app/main/default/objects/Opportunity/fields/DPS_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>DPS_Share_Pct__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Removed access 13.05.25 To be deleted</description>
    <label>xxxDPS Share %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>