force-app/main/default/objects/Opportunity/fields/DPS_Status__c.field-meta.xml
<CustomField>
    <fullName>DPS_Status__c</fullName>
    <inlineHelpText>Current status for DPSs part of the offer</inlineHelpText>
    <label>DPS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Not set)</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned by Us - Capacity</fullName>
            </value>
            <value>
                <fullName>Abandoned by us - Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>