force-app/main/default/objects/Opportunity/fields/DPS_Strategic_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>DPS_Strategic_Sourcing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used if the offer is handled by the Strategic Sourcing Sales Directors in DPS</inlineHelpText>
    <label>DPS Strategic Sourcing</label>
    <type>Checkbox</type>
</CustomField>