force-app/main/default/objects/Opportunity/fields/DPS_Team__c.field-meta.xml
<CustomField>
    <fullName>DPS_Team__c</fullName>
    <formula>TEXT(Account.DPS_Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPS Team</label>
    <type>Text</type>
</CustomField>