force-app/main/default/objects/Opportunity/fields/DPS_Transversal_Go2Market__c.field-meta.xml
<CustomField>
    <fullName>DPS_Transversal_Go2Market__c</fullName>
    <label>DPS Go2Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Journey</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data Driven</fullName>
            </value>
            <value>
                <fullName>Digital Leadership</fullName>
            </value>
            <value>
                <fullName>Digital Workflow</fullName>
            </value>
            <value>
                <fullName>Digital Workplace</fullName>
            </value>
            <value>
                <fullName>Outsourcing</fullName>
            </value>
            <value>
                <fullName>Modern Work</fullName>
                <isActive>false</isActive>
                <label>Modern Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>