force-app/main/default/objects/Opportunity/fields/EUR_Amount__c.field-meta.xml
<CustomField>
    <fullName>EUR_Amount__c</fullName>
    <description>This field is used for monthly KPI reporting to France</description>
    <formula>IF(EUR_Rate__c &gt; 0 , Amount / EUR_Rate__c , Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>