force-app/main/default/objects/Opportunity/fields/EUR_Amount_this_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>EUR_Amount_this_Fiscal_Year__c</fullName>
    <formula>Amount_This_Year_Calculated__c  /  EUR_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR Amount this Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>