force-app/main/default/objects/Opportunity/fields/EUR_Expected_Reveue__c.field-meta.xml
<CustomField>
    <fullName>EUR_Expected_Reveue__c</fullName>
    <formula>IF(EUR_Rate__c &gt; 0 ,  ExpectedRevenue  / EUR_Rate__c , ExpectedRevenue)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUR Expected Reveue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>