force-app/main/default/objects/Opportunity/fields/EUR_Rate__c.field-meta.xml
<CustomField>
    <fullName>EUR_Rate__c</fullName>
    <label>EUR Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>