force-app/main/default/objects/Opportunity/fields/Evaluation_Model__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Model__c</fullName>
    <label>Evaluation Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>