force-app/main/default/objects/Opportunity/fields/Expected_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Expected_Consultants__c</fullName>
    <formula>Consultants__c * Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Consultants</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>