force-app/main/default/objects/Opportunity/fields/External_delivery_portal__c.field-meta.xml
<CustomField>
    <fullName>External_delivery_portal__c</fullName>
    <inlineHelpText>Link to external delivery portal, e.g. for mini competitions</inlineHelpText>
    <label>External delivery portal</label>
    <type>Url</type>
</CustomField>