force-app/main/default/objects/Opportunity/fields/Frame_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Frame_Agreement__c</fullName>
    <label>Frame Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sykehusinnkjøp Konsulenttjenester IKT 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>