force-app/main/default/objects/Opportunity/fields/Frame_Agreement_Call_off__c.field-meta.xml
<CustomField>
    <fullName>Frame_Agreement_Call_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frame Agreement Call-off</label>
    <type>Checkbox</type>
</CustomField>