force-app/main/default/objects/Opportunity/fields/Frame_Agreement_Context__c.field-meta.xml
<CustomField>
    <fullName>Frame_Agreement_Context__c</fullName>
    <label>Frame Agreement Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>