force-app/main/default/objects/Opportunity/fields/Frame_agreement_description__c.field-meta.xml
<CustomField>
    <fullName>Frame_agreement_description__c</fullName>
    <formula>HYPERLINK(&quot;https://soprasteriasc.my.salesforce.com/sfc/p/58000000XlxV/a/4I000001EJi6/NTvF7Whxky90UTRnBRneSdCxygiT_bV0JI1ogVehVmU&quot;, &quot;Read here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frame agreement description</label>
    <type>Text</type>
</CustomField>