force-app/main/default/objects/Opportunity/fields/Frame_Agreement_SE__c.field-meta.xml
<CustomField>
    <fullName>Frame_Agreement_SE__c</fullName>
    <inlineHelpText>To which frame agreement is this call-off connected</inlineHelpText>
    <label>Frame Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVO</fullName>
            </value>
            <value>
                <fullName>Kammarkollegiet  IT Konsulttjänster</fullName>
            </value>
            <value>
                <fullName>Regeringskansliet</fullName>
            </value>
            <value>
                <fullName>Region Stockholm Uppdragskonsulttjänster IT</fullName>
            </value>
            <value>
                <fullName>Arbetsförmedlingen Service Now konsulter</fullName>
            </value>
            <value>
                <fullName>Göteborgs stad Verksamhets- och organisationskonsulter</fullName>
            </value>
            <value>
                <fullName>Nordic Medtest IT-konsulttjänster</fullName>
            </value>
            <value>
                <fullName>Göteborgs Universitet</fullName>
            </value>
            <value>
                <fullName>SOS Alarm</fullName>
            </value>
            <value>
                <fullName>Stockholm stad</fullName>
            </value>
            <value>
                <fullName>Region Stockholm - Konsulttjänster inom strategi och management</fullName>
            </value>
            <value>
                <fullName>Region Stockholm - Konsulttjänster inom miljö och hållbarhet 2024</fullName>
            </value>
            <value>
                <fullName>Ramavtal Förvaltnings- och Utvecklingstjänster Applikationer</fullName>
            </value>
            <value>
                <fullName>Vattenfall Group - Vattenfall AB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>