force-app/main/default/objects/Opportunity/fields/Frame_Agreement_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Frame_Agreement_Sub_Area__c</fullName>
    <inlineHelpText>To which subarea of the frame agreement is this call-off connected</inlineHelpText>
    <label>Frame Agreement Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Frame_Agreement_SE__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anbudsområde 2, ledning av IT-projekt</fullName>
            </value>
            <value>
                <fullName>Anbudsområde 4, arkitektur och utveckling</fullName>
            </value>
            <value>
                <fullName>Delområde 1 – Systemutveckling och systemintegration</fullName>
            </value>
            <value>
                <fullName>Delområde 2 – BI (Business Intelligence)</fullName>
            </value>
            <value>
                <fullName>Delområde 3 – Informations- och IT-säkerhet</fullName>
            </value>
            <value>
                <fullName>Delområde 4 – Big Data och avancerad analys</fullName>
            </value>
            <value>
                <fullName>Systemutveckling</fullName>
            </value>
            <value>
                <fullName>IT-Konsultuppdrag</fullName>
            </value>
            <value>
                <fullName>Anbudsområde 2, dynamiska rangordningen</fullName>
            </value>
            <value>
                <fullName>Anbudsområde 4, dynamiska rangordningen</fullName>
            </value>
            <value>
                <fullName>Service Now konsulter</fullName>
            </value>
            <value>
                <fullName>Delområde A - Verksamhets- och organisationsutveckling</fullName>
            </value>
            <value>
                <fullName>Delområde 1 – Test och testledning</fullName>
            </value>
            <value>
                <fullName>Delområde 3 – Mjukvaruutveckling</fullName>
            </value>
            <value>
                <fullName>Konsulter inom CRM</fullName>
            </value>
            <value>
                <fullName>Avtalsområde 1 - Verksamhetsutveckling, ledning och styrning</fullName>
            </value>
            <value>
                <fullName>Delområde A – Strategi- och mangementkonsulttjänster</fullName>
            </value>
            <value>
                <fullName>Avtalsområde 10 - Strategisk hållbarhet</fullName>
            </value>
            <value>
                <fullName>1. SAP</fullName>
            </value>
            <value>
                <fullName>2. Applications</fullName>
            </value>
            <value>
                <fullName>4. Security</fullName>
            </value>
            <value>
                <fullName>5. Supportive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>