force-app/main/default/objects/Opportunity/fields/Go2Market_Offering__c.field-meta.xml
<CustomField>
    <fullName>Go2Market_Offering__c</fullName>
    <inlineHelpText>Choose the relevant Go2Market team to ensure attention and sales support from the right team</inlineHelpText>
    <label>Go2Market Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI Driven</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Customer Driven</fullName>
            </value>
            <value>
                <fullName>Data Driven</fullName>
            </value>
            <value>
                <fullName>Innovation Driven</fullName>
            </value>
            <value>
                <fullName>Performance Driven</fullName>
            </value>
            <value>
                <fullName>Sustainability Driven</fullName>
            </value>
            <value>
                <fullName>Value Driven</fullName>
            </value>
            <value>
                <fullName>Graduates 2025</fullName>
            </value>
            <value>
                <fullName>Agile</fullName>
                <isActive>false</isActive>
                <label>Agile</label>
            </value>
            <value>
                <fullName>Expert Teams</fullName>
                <isActive>false</isActive>
                <label>Expert Teams</label>
            </value>
            <value>
                <fullName>FAST</fullName>
                <isActive>false</isActive>
                <label>FAST</label>
            </value>
            <value>
                <fullName>Graduates 2023</fullName>
                <isActive>false</isActive>
                <label>Graduates 2023</label>
            </value>
            <value>
                <fullName>Graduates 2024</fullName>
                <isActive>false</isActive>
                <label>Graduates 2024</label>
            </value>
            <value>
                <fullName>Industry</fullName>
                <isActive>false</isActive>
                <label>Industry</label>
            </value>
            <value>
                <fullName>Tech</fullName>
                <isActive>false</isActive>
                <label>Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>