force-app/main/default/objects/Opportunity/fields/IM_Share_Pct__c.field-meta.xml
<CustomField>
    <fullName>IM_Share_Pct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>xxxIM Share %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>