force-app/main/default/objects/Opportunity/fields/IMCS_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMCS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IMCS_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>