force-app/main/default/objects/Opportunity/fields/IMCS_Status__c.field-meta.xml
<CustomField>
    <fullName>IMCS_Status__c</fullName>
    <label>IM Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(Not set)</fullName>
                <default>true</default>
                <label>(Not set)</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned by Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>