force-app/main/default/objects/Opportunity/fields/Internal_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Internal_Due_Date_Time__c</fullName>
    <inlineHelpText>Set by BidManager.  BidManager needs time before Due Date to coordinate input and compose the final Offer.</inlineHelpText>
    <label>Internal Due Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>