force-app/main/default/objects/Opportunity/fields/Interview_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_3__c</fullName>
    <description>Date for consultant inverview #3</description>
    <label>Interview Date 3</label>
    <type>Date</type>
</CustomField>