force-app/main/default/objects/Opportunity/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>Date for consultant inverview</description>
    <label>Interview Date 1</label>
    <type>Date</type>
</CustomField>