force-app/main/default/objects/Opportunity/fields/Interviews_Next_Week__c.field-meta.xml
<CustomField>
    <fullName>Interviews_Next_Week__c</fullName>
    <formula>If(MOD(FLOOR( (Interview_Date__c -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Interview_Date__c)) = 1 + MOD(FLOOR( (Today() -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Today())) , 1, 0) +
If(MOD(FLOOR( (Interview_Date_2__c -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Interview_Date_2__c)) =  1 + MOD(FLOOR( (Today() -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Today())) , 1, 0 )+ 
If(MOD(FLOOR( (Interview_Date_3__c -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Interview_Date_3__c)) = 1 + MOD(FLOOR( (Today() -DATEVALUE(&quot;2018-01-01&quot; ))/7),52)-1 + (100 * Year(Today())) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interviews Next Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>